--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Violetbe</title>
+		<title>소개 페이지</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 			<header id="header">
 				<a href="#" class="ima
 				ge avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>I am violet</strong>, Hello World!<br />
+				<h1><strong>소개 페이지입니다</strong>, Hello World!<br />
 				crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 			</header>
 
