--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			<header id="header">
 				<a href="#" class="ima
 				ge avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>소개 페이지입니다</strong>, Hello World!<br />
-				crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+				<h1><strong>소개 페이지입니다</strong></h1><br><h3>Hello World!</h3>
 			</header>
 
 		<!-- Main -->
