--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
-		<title>소개 페이지</title>
+		<title>미어캣 소개</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 			<header id="header">
 				<a href="#" class="ima
 				ge avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><strong>소개 페이지입니다</strong></h1><br><h3>Hello World!</h3>
+				<h1><strong>미어캣 소개 페이지입니다</strong></h1><br><h3>meerkat!</h3>
 			</header>
 
 		<!-- Main -->
@@ -45,7 +45,7 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<div class="introduce"><p>미어캣은 몽구스과에 속하는 포유동물이다.</p></div>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
