--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<div class="introduce"><h2>미어캣은 몽구스과에 속하는 포유동물이다.</p></h2></div>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p> <h4>몸길이는 50cm 정도인데 그 중 꼬리가 20cm쯤 된다. 몸무게는 1kg이다. 앞발에는 구부러진 강한 발톱이 있어서 굴을 파기에 알맞고, 뒷다리는 짤막하다. 머리는 둥글넓적하고, 코는 뾰족하다. 털은 은빛이 도는 갈색이고 등에 짙은 줄무늬가 있다. 흙이 굳고 돌이 많은 건조지에서 생활하며 30마리 정도 무리 지어 굴 속에서 사는데 굴은 통로와 입구가 많다.</h4></p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -45,7 +44,7 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
-								<div class="introduce"><p>미어캣은 몽구스과에 속하는 포유동물이다.</p></div>
+								<p>미어캣 스토리</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
