--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="ima
-				ge avatar"><img src="images/avatar.jpg" alt="" /></a>
+				ge avatar"><img src="images/meercat.jpg" width="150" height="150" alt="meercat_image" /></a>
 				<h1><strong>미어캣 소개 페이지입니다</strong></h1><br><h3>meerkat!</h3>
 			</header>
 
@@ -31,7 +31,7 @@
 						<header class="major">
 							<div class="introduce"><h2>미어캣은 몽구스과에 속하는 포유동물이다.</p></h2></div>
 						</header>
-						<p> <h4>몸길이는 50cm 정도인데 그 중 꼬리가 20cm쯤 된다. 몸무게는 1kg이다. 앞발에는 구부러진 강한 발톱이 있어서 굴을 파기에 알맞고, 뒷다리는 짤막하다. 머리는 둥글넓적하고, 코는 뾰족하다. 털은 은빛이 도는 갈색이고 등에 짙은 줄무늬가 있다. 흙이 굳고 돌이 많은 건조지에서 생활하며 30마리 정도 무리 지어 굴 속에서 사는데 굴은 통로와 입구가 많다.</h4></p>
+						<p> <h5>몸길이는 50cm 정도인데 그 중 꼬리가 20cm쯤 된다. 몸무게는 1kg이다. 앞발에는 구부러진 강한 발톱이 있어서 굴을 파기에 알맞고, 뒷다리는 짤막하다. 머리는 둥글넓적하고, 코는 뾰족하다. 털은 은빛이 도는 갈색이고 등에 짙은 줄무늬가 있다. 흙이 굳고 돌이 많은 건조지에서 생활하며 30마리 정도 무리 지어 굴 속에서 사는데 굴은 통로와 입구가 많다.</h5></p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
