--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 							<div class="introduce"><h2>미어캣은 몽구스과에 속하는 포유동물이다.</p></h2></div>
 						</header>
 						<p> <h5>몸길이는 50cm 정도인데 그 중 꼬리가 20cm쯤 된다. 몸무게는 1kg이다. 앞발에는 구부러진 강한 발톱이 있어서 굴을 파기에 알맞고, 뒷다리는 짤막하다. 머리는 둥글넓적하고, 코는 뾰족하다. 털은 은빛이 도는 갈색이고 등에 짙은 줄무늬가 있다. 흙이 굳고 돌이 많은 건조지에서 생활하며 30마리 정도 무리 지어 굴 속에서 사는데 굴은 통로와 입구가 많다.</h5></p>
+						<P> <ol>
+							<dl>
+								<dt><li> 첫번째 미어캣</li></dt>
+								<dd> 첫번째 미어캣 설명</dd></dl>
+								<li> 두번째 미어캣</li>
+								<li> 세번째 미어캣</li>
+								<li> 네번째 미어캣</li>
+						</ol></P>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -43,33 +51,33 @@
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>미어캣 스토리</p>
+								<h3>1</h3>
+								<p>미어캣의 일상생활 1</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>2</h3>
+								<p>미어캣 스토리 2</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>3</h3>
+								<p>미어캣 스토리 3</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>4</h3>
+								<p>미어캣 스토리 4</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>5</h3>
+								<p>미어캣 스토리 5</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>6</h3>
+								<p>미어캣 스토리 6</p>
 							</article>
 						</div>
 						<ul class="actions">
