--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 						<p>아래의 양식을 채워서 연락주시면 바로 회신드리겠습니다.</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
-								<form method="post" action="#">
+								<form method="post" action="">
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="mobile"><input type="number" name="mobile" placeholder="Mobile" /> </div>
+										<div class="6u$ 12u$(xsmall)"><input type="text" name="mobile" placeholder="Mobile" /> </div>
 										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
 								</form>
