--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h5>Icons</h5>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="http://twitter.com" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+										<li><a href="http://facebook.com" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="http://instagram.com" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="http://github.com" class="icon fa-github"><span class="label">Github</span></a></li>
 										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+										<li><a href="http://tumblr.com" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 									</ul>
 								</div>
 							</div>
