--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
-					</section>
+					</section> 
 
 				<!-- Two -->
 					<section id="two">
@@ -95,7 +95,7 @@
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="6u$ 12u$(xsmall)"><input type="text" name="mobile" placeholder="Mobile" /> </div>
+										<div class="12u$ 12u$(xsmall)"><input type="text" name="mobile" placeholder="Mobile" /> </div>
 										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
 								</form>
@@ -449,10 +449,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="http://twitter.com" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="http://github.com" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="mailto:#@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
