--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
 										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										Lalalala, TN 00000<br />
+										Rainbow
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
@@ -119,7 +119,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">#@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -457,7 +457,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="mailto:#@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; violet</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
